Изменено отображение картинок в товаре

--- a/item.html
+++ b/item.html
@@ -72,15 +72,21 @@
         <div class="product__images-main">
           <img src="" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
         </div>
-        
-        <div class="product__images-preload">
-          <img src="" alt="набор для путешествий «Baxter of California»" class="product__img">
-          <img src="" alt="Удобная кожаная косметичка" class="product__img">
-          <img src="" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
-        </div>
+
+        <ul class="product__images-preload preload__list">
+          <li class="preload__item">
+            <img src="" alt="набор для путешествий «Baxter of California»" class="product__img">
+          </li>
+          <li class="preload__item">
+            <img src="" alt="Удобная кожаная косметичка" class="product__img">
+          </li>
+          <li class="preload__item">
+            <img src="" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
+          </li>
+        </ul>
       </div>
 
-      <div class="product__content">
+      <div class="product__info">
         <span class="product__count">eсть в наличии</span>
         <span class="product__article">Артикул: dexter-ae</span>
 
@@ -88,8 +94,10 @@
           для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем
           для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 
-        <span class="product__price">2 900</span>
-        <a href="#" class="product__buy">Купить</a>
+        <p class="product__cart">
+          <span class="product__price">2900</span>
+          <a href="#" class="product__buy">Купить</a>
+        </p>
 
         <div class="product__includes includes">
           <h3 class="includes__title">В набор входят:</h3>
