Изменена карточка товара

--- a/shop.html
+++ b/shop.html
@@ -128,63 +128,117 @@
 
       <ul class="catalog__products products__list">
         <li class="products__item product">
-          <img src="" alt="Набор для путешествий «Baxter of California»" class="product__img">
-          <p class="product__type">Набор для путешествий</p>
-          <p>
-            <a href="#" class="product__brand">«Baxter of California»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Набор для путешествий</span>
+              <span class="product__brand">«Baxter of California»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Набор для путешествий «Baxter of California»">
+          </div>
+
+          <p class="product__cart">
+            <span class="product__price">2 900</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">2 900</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
 
         <li class="products__item product">
-          <img src="" alt="Увлажняющий кондиционер «Baxter of California»" class="product__img">
-          <p class="product__type">Увлажняющий кондиционер</p>
-          <p>
-            <a href="#" class="product__brand">«Baxter of California»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Увлажняющий кондиционер</span>
+              <span class="product__brand">«Baxter of California»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Увлажняющий кондиционер «Baxter of California»">
+          </div>
+
+          <p class="product__cart">
+            <span class="product__price">750</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">750</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
 
         <li class="products__item product">
-          <img src="" alt="Гель для волос «SUAVECITO»" class="product__img">
-          <p class="product__type">Гель для волос</p>
-          <p>
-            <a href="#" class="product__brand">«SUAVECITO»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Гель для волос</span>
+              <span class="product__brand">«SUAVECITO»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Гель для волос «SUAVECITO»">
+          </div>
+
+          <p class="product__cart">
+            <span class="product__price">290</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">290</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
 
         <li class="products__item product">
-          <img src="" alt="Глина для укладки волос «American crew»" class="product__img">
-          <p class="product__type">Глина для укладки волос</p>
-          <p>
-            <a href="#" class="product__brand">«American crew»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Глина для укладки волос</span>
+              <span class="product__brand">«American crew»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Глина для укладки волос «American crew»">
+          </div>
+
+          <p class="product__cart">
+            <span class="product__price">500</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">500</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
 
         <li class="products__item product">
-          <img src="" alt="Гель для волос «AMERICAN CREW»" class="product__img">
-          <p class="product__type">Гель для волос</p>
-          <p>
-            <a href="#" class="product__brand">«AMERICAN CREW»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Гель для волос</span>
+              <span class="product__brand">«AMERICAN CREW»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Гель для волос «AMERICAN CREW»">
+          </div>
+
+          <p class="product__cart">
+            <span class="product__price">300</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">300</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
 
         <li class="products__item product">
-          <img src="" alt="Набор для бритья «Baxter of California»" class="product__img">
-          <p class="product__type">Набор для бритья</p>
-          <p>
-            <a href="#" class="product__brand">«Baxter of California»</a>
+          <h3 class="product__title">
+            <a href="#" class="product__link">
+              <span class="product__type">Набор для путешествий</span>
+              <span class="product__brand">«Baxter of California»</span>
+            </a>
+          </h3>
+
+          <div class="product__img">
+            <img src="" alt="Набор для бритья «Baxter of California»">
+          </div>
+          
+          <p class="product__cart">
+            <span class="product__price">3900</span>
+            <a href="#" class="product__buy">Купить</a>
           </p>
-          <span class="product__price">3900</span>
-          <a href="#" class="product__buy">Купить</a>
+
         </li>
       </ul>
 
