--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="main-header__nav nav">
       <a class="main-header__logo logo">
-        <img src="../img/logo.png" alt="Barbershop" class="logo__img">
+        <img src="img/svg/index-logo.svg" alt="Barbershop" class="logo__img">
       </a>
 
       <ul class="nav__list">
@@ -94,7 +94,7 @@
       <figure class="gallery-content">
         <ul class="gallery-content__list">
           <li class="gallery-content__item">
-            <img class="gallery-content__img" src="" alt="Какое-то изображение помещения">
+            <img class="gallery-content__img" src="img/content/gallery-img.jpg" alt="Какое-то изображение помещения">
           </li>
         </ul>
         <span class="gallery-content__navigation gallery-content__navigation--prev">Назад</span>
