--- a/item.html
+++ b/item.html
@@ -13,7 +13,7 @@
 
     <nav class="main-header__nav nav">
       <a class="main-header__logo logo">
-        <img src="../img/logo.png" alt="Barbershop" class="logo__img">
+        <img src="img/svg/inner-logo.svg" alt="Barbershop" class="logo__img">
       </a>
 
       <ul class="nav__list">
@@ -70,18 +70,18 @@
 
       <div class="product__images">
         <div class="product__images-main">
-          <img src="" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
+          <img src="img/content/product-big.jpg" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
         </div>
 
         <ul class="product__images-preload preload__list">
           <li class="preload__item">
-            <img src="" alt="набор для путешествий «Baxter of California»" class="product__img">
+            <img src="img/content/product-small-1.jpg" alt="набор для путешествий «Baxter of California»" class="product__img">
           </li>
           <li class="preload__item">
-            <img src="" alt="Удобная кожаная косметичка" class="product__img">
+            <img src="img/content/product-small-2.jpg" alt="Удобная кожаная косметичка" class="product__img">
           </li>
           <li class="preload__item">
-            <img src="" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
+            <img src="img/content/product-small-3.jpg" alt="набор для путешествий «Baxter of California» на коробке" class="product__img">
           </li>
         </ul>
       </div>
