--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
 
     <nav class="main-header__nav nav">
       <a class="main-header__logo logo">
-        <img src="../img/logo.png" alt="Barbershop" class="logo__img">
+        <img src="img/svg/inner-logo.svg" alt="Barbershop" class="logo__img">
       </a>
 
       <ul class="nav__list">
@@ -136,7 +136,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Набор для путешествий «Baxter of California»">
+            <img src="img/content/product-1.jpg" alt="Набор для путешествий «Baxter of California»">
           </div>
 
           <p class="product__cart">
@@ -155,7 +155,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Увлажняющий кондиционер «Baxter of California»">
+            <img src="img/content/product-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»">
           </div>
 
           <p class="product__cart">
@@ -174,7 +174,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Гель для волос «SUAVECITO»">
+            <img src="img/content/product-3.jpg" alt="Гель для волос «SUAVECITO»">
           </div>
 
           <p class="product__cart">
@@ -193,7 +193,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Глина для укладки волос «American crew»">
+            <img src="img/content/product-4.jpg" alt="Глина для укладки волос «American crew»">
           </div>
 
           <p class="product__cart">
@@ -212,7 +212,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Гель для волос «AMERICAN CREW»">
+            <img src="img/content/product-5.jpg" alt="Гель для волос «AMERICAN CREW»">
           </div>
 
           <p class="product__cart">
@@ -231,7 +231,7 @@
           </h3>
 
           <div class="product__img">
-            <img src="" alt="Набор для бритья «Baxter of California»">
+            <img src="img/content/product-6.jpg" alt="Набор для бритья «Baxter of California»">
           </div>
           
           <p class="product__cart">
