--- a/price.html
+++ b/price.html
@@ -13,7 +13,7 @@
 
     <nav class="main-header__nav nav">
       <a class="main-header__logo logo">
-        <img src="../img/logo.png" alt="Barbershop" class="logo__img">
+        <img src="img/svg/inner-logo.svg" alt="Barbershop" class="logo__img">
       </a>
 
       <ul class="nav__list">
