Изменены подписи социальных сетей в подвале

--- a/price.html
+++ b/price.html
@@ -111,13 +111,13 @@
       <b class="socials__title">Давайте дружить!</b>
       <ul class="socials__list">
         <li class="socials__list">
-          <a href="vk.com" class="socials__link">vk</a>
+          <a href="vk.com" class="socials__link">vkontakte</a>
         </li>
         <li class="socials__list">
-          <a href="fb.com" class="socials__link">fb</a>
+          <a href="fb.com" class="socials__link">facebook</a>
         </li>
         <li class="socials__list">
-          <a href="inst.com" class="socials__link">inst</a>
+          <a href="inst.com" class="socials__link">instagram</a>
         </li>
       </ul>
     </div>
