Размечено модальное окно с картой

--- a/index.html
+++ b/index.html
@@ -207,7 +207,13 @@
     <button class="modal-login__close" type="button">Закрыть</button>
   </section>
 
-  <section class="modal"></section>
+  <section class="modal modal-map">
+    <h2 class="modal-map__title visually-hidden">Как нас найти?</h2>
+    <p class="modal-map__content">
+      <img class="modal-map__img" src="" alt="АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8">
+    </p>
+    <button class="modal-map__close">Закрыть</button>
+  </section>
 </body>
 
 </html>
