--- a/item.html
+++ b/item.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Barbershop</title>
 </head>
 
-<body>
+<body class="inner-page">
   <header class="main-header">
 
     <nav class="main-header__nav nav">
@@ -33,17 +36,17 @@
           <a href="contacts.html" class="nav__link">Контакты</a>
         </li>
       </ul>
-    </nav>
 
-    <ul class="user-block">
-      <li class="user-block__item">
-        <a href="user.html" class="user-block__link">Вход</a>
-      </li>
-    </ul>
+      <ul class="user-block">
+        <li class="user-block__item">
+          <a href="user.html" class="user-block__link">Вход</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <h1 class="main-content__title">набор для путешествий «Baxter of California»</h1>
+    <h1 class="main-content__title page-title">набор для путешествий «Baxter of California»</h1>
 
     <section class="breadcrumbs">
       <ul class="breadcrumbs__list">
@@ -60,7 +63,7 @@
         </li>
 
         <li class="breadcrumbs__item">
-          <a href="#" class="breadcrumbs__link">набор для путешествий «Baxter of California»</a>
+          <a href="#" class="breadcrumbs__link breadcrumbs__link-current">набор для путешествий «Baxter of California»</a>
         </li>
       </ul>
     </section>
@@ -96,7 +99,7 @@
 
         <p class="product__cart">
           <span class="product__price">2900</span>
-          <a href="#" class="product__buy">Купить</a>
+          <a href="#" class="product__buy btn">Купить</a>
         </p>
 
         <div class="product__includes includes">
@@ -118,7 +121,7 @@
       БАРБЕРШОП «БОРОДИНСКИЙ»
       <br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8
       <br>
-      <a href="map.html">КАК НАС НАЙТИ?</a>
+      <a href="map.html" class="main-footer__contacts-find">КАК НАС НАЙТИ?</a>
       <br> ТЕЛЕФОН:
       <a href="tel:+7495660266">+7 (495) 666-02-66</a>
     </p>
