--- a/price.html
+++ b/price.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Barbershop</title>
 </head>
 
-<body>
+<body class="inner-page">
   <header class="main-header">
 
     <nav class="main-header__nav nav">
@@ -33,17 +36,17 @@
           <a href="contacts.html" class="nav__link">Контакты</a>
         </li>
       </ul>
-    </nav>
 
-    <ul class="user-block">
-      <li class="user-block__item">
-        <a href="user.html" class="user-block__link">Вход</a>
-      </li>
-    </ul>
+      <ul class="user-block">
+        <li class="user-block__item">
+          <a href="user.html" class="user-block__link">Вход</a>
+        </li>
+      </ul>
+    </nav>    
   </header>
 
   <main>
-    <h1 class="main-content__title">ПРАЙС-ЛИСТ</h1>
+    <h1 class="main-content__title page-title">ПРАЙС-ЛИСТ</h1>
 
     <section class="breadcrumbs">
       <ul class="breadcrumbs__list">
@@ -60,7 +63,7 @@
     <b class="main-content__slogan">ИСТИННО МУЖСКАЯ КЛАССИКА</b>
 
     <section class="we-use">
-      <h2 class="we-use__title">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h2>
+      <h2 class="we-use__title block__title">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h2>
 
       <ul class="we-use__list">
         <li class="we-use__item">Baxter of California</li>
@@ -71,7 +74,7 @@
     </section>
 
     <section class="price">
-      <h2 class="price__title">ЦЕНЫ НА УСЛУГИ
+      <h2 class="price__title block__title">ЦЕНЫ НА УСЛУГИ
           НАШИХ МАСТЕРОВ:</h2>
       <table class="price__table">
         <tr>
@@ -90,7 +93,7 @@
     </section>
 
     <section class="about-us">
-      <h2 class="about-us__title">НЕСКОЛЬКО СЛОВ О НАС:</h2>
+      <h2 class="about-us__title block__title">НЕСКОЛЬКО СЛОВ О НАС:</h2>
       <p class="about-us__text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
       <p class="about-us__text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
     </section>
@@ -102,7 +105,7 @@
       БАРБЕРШОП «БОРОДИНСКИЙ»
       <br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8
       <br>
-      <a href="map.html">КАК НАС НАЙТИ?</a>
+      <a href="map.html" class="main-footer__contacts-find">КАК НАС НАЙТИ?</a>
       <br> ТЕЛЕФОН:
       <a href="tel:+7495660266">+7 (495) 666-02-66</a>
     </p>
