--- a/shop.html
+++ b/shop.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Barbershop</title>
 </head>
 
-<body>
+<body class="inner-page">
   <header class="main-header">
 
     <nav class="main-header__nav nav">
@@ -33,17 +36,17 @@
           <a href="contacts.html" class="nav__link">Контакты</a>
         </li>
       </ul>
-    </nav>
 
-    <ul class="user-block">
-      <li class="user-block__item">
-        <a href="user.html" class="user-block__link">Вход</a>
-      </li>
-    </ul>
+      <ul class="user-block">
+        <li class="user-block__item">
+          <a href="user.html" class="user-block__link">Вход</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <h1 class="main-content__title">СРЕДСТВА ДЛЯ УХОДА</h1>
+    <h1 class="main-content__title page-title">СРЕДСТВА ДЛЯ УХОДА</h1>
 
     <section class="breadcrumbs">
       <ul class="breadcrumbs__list">
@@ -66,7 +69,7 @@
 
       <form class="sort__form form-sort" action="https://echo.htmlacademy.ru" method="GET">
         <fieldset class="form-sort__block">
-          <legend class="form-sort__block-title">Производители:</legend>
+          <legend class="form-sort__block-title block__title">Производители:</legend>
           <ul class="form-sort__list">
             <li class="form-sort__item">
               <input id="baxter-of-alifornia" class="visually-hidden" type="checkbox" value="Baxter of California" checked>
@@ -101,7 +104,7 @@
         </fieldset>
 
         <fieldset class="form-sort__block">
-          <legend class="form-sort__block-title">Группы товаров:</legend>
+          <legend class="form-sort__block-title block__title">Группы товаров:</legend>
           <ul class="form-sort__list">
             <li class="form-sort__item">
               <input id="shaving-accessories" class="visually-hidden" type="radio" name="Group of Products" value="shaving accessories">
@@ -119,7 +122,7 @@
             </li>
           </ul>
         </fieldset>
-        <button type="submit" class="form-sort__send">Показать</button>
+        <button type="submit" class="form-sort__send btn">Показать</button>
       </form>
     </section>
 
@@ -141,7 +144,7 @@
 
           <p class="product__cart">
             <span class="product__price">2 900</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
         </li>
 
@@ -159,7 +162,7 @@
 
           <p class="product__cart">
             <span class="product__price">750</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
 
         </li>
@@ -178,7 +181,7 @@
 
           <p class="product__cart">
             <span class="product__price">290</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
 
         </li>
@@ -197,7 +200,7 @@
 
           <p class="product__cart">
             <span class="product__price">500</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
 
         </li>
@@ -216,7 +219,7 @@
 
           <p class="product__cart">
             <span class="product__price">300</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
 
         </li>
@@ -235,7 +238,7 @@
 
           <p class="product__cart">
             <span class="product__price">3900</span>
-            <a href="#" class="product__buy">Купить</a>
+            <a href="#" class="product__buy btn">Купить</a>
           </p>
 
         </li>
@@ -243,16 +246,16 @@
 
       <ul class="catalog__pagination pagaination__list">
         <li class="pagination__item">
-          <a href="#" class="pagination__link">1</a>
+          <a href="#" class="pagination__link btn">1</a>
         </li>
         <li class="pagination__item">
-          <a href="#" class="pagination__link">2</a>
+          <a href="#" class="pagination__link pagination__link--current btn">2</a>
         </li>
         <li class="pagination__item">
-          <a href="#" class="pagination__link">3</a>
+          <a href="#" class="pagination__link btn">3</a>
         </li>
         <li class="pagination__item">
-          <a href="#" class="pagination__link">4</a>
+          <a href="#" class="pagination__link btn">4</a>
         </li>
       </ul>
     </section>
@@ -264,7 +267,7 @@
       БАРБЕРШОП «БОРОДИНСКИЙ»
       <br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8
       <br>
-      <a href="map.html">КАК НАС НАЙТИ?</a>
+      <a href="map.html" class="main-footer__contacts-find">КАК НАС НАЙТИ?</a>
       <br> ТЕЛЕФОН:
       <a href="tel:+7495660266">+7 (495) 666-02-66</a>
     </p>
