Добавлена анимация и скрипты к страницам

--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
 
   <div class="modal-overlay"></div>
 
-  <script src="js/main.js"></script>
+  <script src="js/login.js"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
